# adaptagrams

./: .gitignore  CLAUDE.md  CMAKE_TOOLCHAIN_FIX.md  CMakeLists.txt  CONAN_WINDOWS_SETUP.md  Makefile  README.md  WINDOWS_BUILD.md  WINDOWS_BUILD_FIXES.md  conanfile.py  conanfile.txt  test_conan_build.sh
.github/workflows/: build-cmake.yml  build-windows.yml
cmake/: AdaptagramsConfig.cmake.in  AdaptagramsLibrary.cmake
cola/: .gitignore  CMakeLists.txt  adaptagrams.i  swig-python3-setup.py
cola/libavoid/: CMakeLists.txt
cola/libavoid/tests/: CMakeLists.txt
cola/libcola/: CMakeLists.txt  config.h.cmake.in
cola/libcola/tests/: CMakeLists.txt
cola/libdialect/: CMakeLists.txt  constraints.cpp  faces.cpp  graphs.cpp  io.cpp  ortho.cpp
cola/libdialect/tests/: CMakeLists.txt
cola/libproject/: CMakeLists.txt  project.cpp
cola/libproject/tests/: CMakeLists.txt
cola/libtopology/: CMakeLists.txt  orthogonal_topology.cpp
cola/libtopology/tests/: CMakeLists.txt
cola/libvpsc/: CMakeLists.txt  assertions.h  rectangle.cpp
cola/libvpsc/tests/: CMakeLists.txt
experimental/: conanfile.txt
